cursive-bootstrap/tests/ui/E-CON/E-CON-0141.cursive
// RUN: compile-fail
// DIAG: E-CON-0141
// SPEC: 8.9
// DESC: Key inference failed - cannot determine required keys

record Complex {
    a: shared Inner
    b: shared Inner
}

record Inner {
    value: i32
}

procedure ambiguous_keys(domain: $ExecutionDomain, c: Complex, flag: bool) -> () {
    parallel domain {
        dispatch i in 0..10 {  //~ ERROR E-CON-0141: key inference failed
            if flag {
                # write c.a.value { c.a.value = i }
            } else {
                # write c.b.value { c.b.value = i }
            }
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
